--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Satisfy&family=Zen+Loop&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Satisfy&family=Shadows+Into+Light&family=Zen+Loop&display=swap');
     </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
