--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Satisfy&family=Shadows+Into+Light&family=Zen+Loop&display=swap');
     </style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
